--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ url: https://y7kim.github.io
 baseurl: /ago-dic-2018
 
 # Site settings
-title: EVAP(English).
+title: EVAP - English
 email: atorresro@itesm.mx
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 
